--- a/docs/docs/integrations/shopify.mdx
+++ b/docs/docs/integrations/shopify.mdx
@@ -39,7 +39,7 @@ Once added, click "Save" and navigate back to GrowthBook.
 ### Step 3: Install the GrowthBook Chrome Extension
 
 The GrowthBook Chrome Extension allows you to use the Visual Editor to update your Shopify store's content. It's free, and you can download it [here](https://chromewebstore.google.com/detail/growthbook-devtools/opemhndcehfgipokneipaafbglcecjia).
-
+^^at this step include instructions that explain where to get API Host and API Secret to setup the GrowthBook DevTools Chrome Extension
 ### Step 4: Create a GrowthBook Visual Editor Experiment
 
 :::info Note
